--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,7 @@ edition = "2021"
 
 [dependencies]
 rust-sc2 = { git = "https://github.com/UltraMachine/rust-sc2" }
+
+[features]
+rayon = []
+serde = []
