--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+priority-queue = "1.3.2"
 rust-sc2 = { git = "https://github.com/UltraMachine/rust-sc2" }
 
 [features]
